--- a/ImageFeed/Base.lproj/Main.storyboard
+++ b/ImageFeed/Base.lproj/Main.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="pJb-5T-Brc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="LnZ-37-M5o">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -186,7 +186,7 @@
         <!--Tab Bar Controller-->
         <scene sceneID="D1Q-MO-zQj">
             <objects>
-                <tabBarController id="CH6-fL-jVn" sceneMemberID="viewController">
+                <tabBarController storyboardIdentifier="TabBarViewController" id="CH6-fL-jVn" sceneMemberID="viewController">
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="ihi-kz-pC9">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -199,7 +199,7 @@
                     </tabBar>
                     <connections>
                         <segue destination="lij-5o-nkO" kind="relationship" relationship="viewControllers" id="9VS-2r-9gQ"/>
-                        <segue destination="aqS-1y-ua3" kind="relationship" relationship="viewControllers" id="lDX-JK-o5V"/>
+                        <segue destination="VD7-ek-py6" kind="relationship" relationship="viewControllers" id="lDX-JK-o5V"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4Hv-5X-eXQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -216,29 +216,29 @@
                         <viewLayoutGuide key="safeArea" id="2JC-2m-NyG"/>
                         <color key="backgroundColor" name="YP Black"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="" image="tab_profile_active" id="D6k-ud-fgz"/>
+                    <navigationItem key="navigationItem" id="a6b-5m-Axq"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ixU-6Q-Abl" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="46" y="659"/>
+            <point key="canvasLocation" x="864" y="659"/>
         </scene>
         <!--Auth View Controller-->
         <scene sceneID="bu3-7p-X2P">
             <objects>
                 <viewController id="sRP-eo-agN" customClass="AuthViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="myr-5K-RfW">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="886"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="auth_screen_logo" translatesAutoresizingMaskIntoConstraints="NO" id="B7J-EA-Yv0">
-                                <rect key="frame" x="177" y="447" width="60" height="60"/>
+                                <rect key="frame" x="177" y="441" width="60" height="60"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="60" id="bxO-3i-isz"/>
                                     <constraint firstAttribute="height" constant="60" id="hws-u8-NsR"/>
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gan-af-y4b" userLabel="AuthButton">
-                                <rect key="frame" x="16" y="690" width="382" height="48"/>
+                                <rect key="frame" x="16" y="714" width="382" height="48"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="48" id="e8W-ue-7u1"/>
                                 </constraints>
@@ -275,7 +275,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hB7-3N-Qgc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="20" y="1357"/>
+            <point key="canvasLocation" x="-52" y="1356"/>
         </scene>
         <!--Web View View Controller-->
         <scene sceneID="CHi-ef-mbL">
@@ -332,7 +332,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9Wt-aD-3aN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="864" y="1357"/>
+            <point key="canvasLocation" x="767" y="1356"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="UWx-Oo-bA5">
@@ -361,7 +361,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="pJb-5T-Brc" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="t2Z-Mn-SmJ">
-                        <rect key="frame" x="0.0" y="48" width="414" height="44"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="56"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -371,7 +371,57 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="d7U-8J-uJq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-871" y="1357"/>
+            <point key="canvasLocation" x="-871" y="1356"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="OAi-ax-oMz">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="VD7-ek-py6" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="" image="tab_profile_active" id="D6k-ud-fgz"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="kUb-u7-0gd">
+                        <rect key="frame" x="0.0" y="48" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="aqS-1y-ua3" kind="relationship" relationship="rootViewController" id="Rf1-s5-9gv"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NTE-Xu-iZ1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="44.927536231884062" y="658.92857142857144"/>
+        </scene>
+        <!--Splash View Controller-->
+        <scene sceneID="zec-zH-9ZD">
+            <objects>
+                <viewController id="LnZ-37-M5o" customClass="SplashViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="7k3-zu-QdG">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchscreenLogo" translatesAutoresizingMaskIntoConstraints="NO" id="IlG-UD-ecu">
+                                <rect key="frame" x="169.5" y="416" width="75" height="78"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="75" id="D6V-Nt-eJj"/>
+                                    <constraint firstAttribute="height" constant="78" id="XQd-Oc-vI8"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="jZ8-yO-lbr"/>
+                        <color key="backgroundColor" name="YP Black"/>
+                        <constraints>
+                            <constraint firstItem="IlG-UD-ecu" firstAttribute="centerY" secondItem="7k3-zu-QdG" secondAttribute="centerY" constant="7" id="NiL-eg-jRx"/>
+                            <constraint firstItem="IlG-UD-ecu" firstAttribute="centerX" secondItem="7k3-zu-QdG" secondAttribute="centerX" id="lXM-df-vX8"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <segue destination="pJb-5T-Brc" kind="presentation" identifier="ShowAuthenticationScreen" id="8nd-IL-KMD"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="P0L-Pu-f6M" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1807" y="855"/>
         </scene>
     </scenes>
     <resources>
@@ -379,6 +429,7 @@
         <image name="1" width="200" height="260"/>
         <image name="LikeButtonOn" width="44" height="44"/>
         <image name="auth_screen_logo" width="60" height="60"/>
+        <image name="launchscreenLogo" width="75" height="78"/>
         <image name="nav_back_button" width="24" height="24"/>
         <image name="sharing_button" width="51" height="50"/>
         <image name="single_image_back_button" width="9" height="16"/>
