--- a/ImageFeed/Base.lproj/Main.storyboard
+++ b/ImageFeed/Base.lproj/Main.storyboard
@@ -401,7 +401,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchscreenLogo" translatesAutoresizingMaskIntoConstraints="NO" id="IlG-UD-ecu">
-                                <rect key="frame" x="169.5" y="416" width="75" height="78"/>
+                                <rect key="frame" x="169.5" y="409" width="75" height="78"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="75" id="D6V-Nt-eJj"/>
                                     <constraint firstAttribute="height" constant="78" id="XQd-Oc-vI8"/>
@@ -411,7 +411,7 @@
                         <viewLayoutGuide key="safeArea" id="jZ8-yO-lbr"/>
                         <color key="backgroundColor" name="YP Black"/>
                         <constraints>
-                            <constraint firstItem="IlG-UD-ecu" firstAttribute="centerY" secondItem="7k3-zu-QdG" secondAttribute="centerY" constant="7" id="NiL-eg-jRx"/>
+                            <constraint firstItem="IlG-UD-ecu" firstAttribute="centerY" secondItem="7k3-zu-QdG" secondAttribute="centerY" id="NiL-eg-jRx"/>
                             <constraint firstItem="IlG-UD-ecu" firstAttribute="centerX" secondItem="7k3-zu-QdG" secondAttribute="centerX" id="lXM-df-vX8"/>
                         </constraints>
                     </view>
