--- a/ImageFeed/Base.lproj/Main.storyboard
+++ b/ImageFeed/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="LnZ-37-M5o">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -205,20 +205,20 @@
         <!--Auth View Controller-->
         <scene sceneID="bu3-7p-X2P">
             <objects>
-                <viewController id="sRP-eo-agN" customClass="AuthViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="AuthViewController" id="sRP-eo-agN" customClass="AuthViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="myr-5K-RfW">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="886"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="auth_screen_logo" translatesAutoresizingMaskIntoConstraints="NO" id="B7J-EA-Yv0">
-                                <rect key="frame" x="177" y="441" width="60" height="60"/>
+                                <rect key="frame" x="177" y="425" width="60" height="60"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="60" id="bxO-3i-isz"/>
                                     <constraint firstAttribute="height" constant="60" id="hws-u8-NsR"/>
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gan-af-y4b" userLabel="AuthButton">
-                                <rect key="frame" x="16" y="714" width="382" height="48"/>
+                                <rect key="frame" x="16" y="690" width="382" height="48"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="48" id="e8W-ue-7u1"/>
                                 </constraints>
@@ -314,62 +314,12 @@
             </objects>
             <point key="canvasLocation" x="767" y="1356"/>
         </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="hLg-dK-bht">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="pJb-5T-Brc" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="t2Z-Mn-SmJ">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="56"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="sRP-eo-agN" kind="relationship" relationship="rootViewController" id="O7p-Vy-Cac"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="d7U-8J-uJq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-871" y="1356"/>
-        </scene>
-        <!--Splash View Controller-->
-        <scene sceneID="zec-zH-9ZD">
-            <objects>
-                <viewController id="LnZ-37-M5o" customClass="SplashViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="7k3-zu-QdG">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchscreenLogo" translatesAutoresizingMaskIntoConstraints="NO" id="IlG-UD-ecu">
-                                <rect key="frame" x="169.5" y="409" width="75" height="78"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="75" id="D6V-Nt-eJj"/>
-                                    <constraint firstAttribute="height" constant="78" id="XQd-Oc-vI8"/>
-                                </constraints>
-                            </imageView>
-                        </subviews>
-                        <viewLayoutGuide key="safeArea" id="jZ8-yO-lbr"/>
-                        <color key="backgroundColor" name="YP Black"/>
-                        <constraints>
-                            <constraint firstItem="IlG-UD-ecu" firstAttribute="centerY" secondItem="7k3-zu-QdG" secondAttribute="centerY" id="NiL-eg-jRx"/>
-                            <constraint firstItem="IlG-UD-ecu" firstAttribute="centerX" secondItem="7k3-zu-QdG" secondAttribute="centerX" id="lXM-df-vX8"/>
-                        </constraints>
-                    </view>
-                    <connections>
-                        <segue destination="pJb-5T-Brc" kind="presentation" identifier="ShowAuthenticationScreen" id="8nd-IL-KMD"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="P0L-Pu-f6M" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-1807" y="855"/>
-        </scene>
     </scenes>
     <resources>
         <image name="0" width="200" height="132"/>
         <image name="1" width="200" height="260"/>
         <image name="LikeButtonOn" width="44" height="44"/>
         <image name="auth_screen_logo" width="60" height="60"/>
-        <image name="launchscreenLogo" width="75" height="78"/>
         <image name="nav_back_button" width="24" height="24"/>
         <image name="sharing_button" width="51" height="50"/>
         <image name="single_image_back_button" width="9" height="16"/>
