--- a/ImageFeed/Base.lproj/Main.storyboard
+++ b/ImageFeed/Base.lproj/Main.storyboard
@@ -45,7 +45,7 @@
                                                 </imageView>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5ce-a7-Gs0" userLabel="Like Button">
                                                     <rect key="frame" x="354" y="4" width="44" height="44"/>
-                                                    <accessibility key="accessibilityConfiguration" identifier="likebutton"/>
+                                                    <accessibility key="accessibilityConfiguration" identifier="likeButtonToTap"/>
                                                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                     <state key="normal" image="LikeButtonOn"/>
                                                     <connections>
